--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "igdb-api-node": "^3.1.7",
-    "jasmine": "^3.1.0",
-    "mock-require": "^3.0.2"
+    "jasmine": "^3.1.0"
   }
 }
