updated readme file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/jasmine",
+    "start": "node server.js"
   },
   "author": "s.vdovareize",
   "license": "ISC",
